edit button working

--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>todo list from scratch 4</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://use.fontawesome.com/f7ec0209f5.js"></script>
 </head>
 
 <body>
@@ -23,7 +19,7 @@
       </div>
     <div class="container list">
       <label> Input your to do </label>
-      <input type="text" id="todoInput" placeholder="Input your to do here" name="todo" > 
+      <input type="text" id="todoInput" placeholder="Input your to do here" name="todo" >
       <button id="add" class="global-buttons"> Add to list </button>
       <ul  class="todoContainer">
       </ul>
@@ -32,7 +28,7 @@
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
-  
+
 
     <script  src="js/index.js"></script>
 
