--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>todo list from scratch 4</title>
   <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
   <script src="https://use.fontawesome.com/f7ec0209f5.js"></script>
 </head>
 
