uncomplete all button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="buttons">
     <button id="newList" class="global-buttons"> New List </button>
     <button id="completeAll" class="global-buttons"> Complete All</button>
+    <button id="uncompleteAll" class="global-buttons"> Mark All Incomplete </button>
       </div>
     <div class="container list">
       <label> Input your to do </label>
