meta mobile view

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" >
 
 <head>
+  <meta name="viewport" content="width=device-width">
   <meta charset="UTF-8">
+  <meta name="description" content="to do list">
+ <meta name="keywords" content="inna, leikina, web, design, development, denver, colorado, aurora">
+ <meta name="author" content="Inna Leikina">
   <title>todo list from scratch 4</title>
   <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
