--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
 </head>
 
 <body>
+  <div class="drop-down-menu contianer">
+    <i class="fa fa-2x fa-bars" aria-hidden="true"></i>
+  </div>
+  <div class="buttons">
+    <button id="newList" class="global-buttons"> New List </button>
+    <button id="completeAll" class="global-buttons"> Complete All</button>
+    <button id="uncompleteAll" class="global-buttons"> Uncomplete All</button>
+  </div>
 
   <div class="main container">
   <div class="all container">
     <h1> My List </h1>
-    <div class="buttons">
-    <button id="newList" class="global-buttons"> New List </button>
-    <button id="completeAll" class="global-buttons"> Complete All</button>
-    <button id="uncompleteAll" class="global-buttons"> Mark All Incomplete </button>
-      </div>
+
     <div class="container list">
       <label> Input your to do </label>
       <input type="text" id="todoInput" placeholder="Input your to do here" name="todo" >
