css changes for input field and smaller buttons on todos

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 
     <div class="container list">
       <label> Input your to do </label>
-      <input type="text" id="todoInput" placeholder="Input your to do here" name="todo" >
-      <button id="add" class="global-buttons"> Add to list </button>
+      <div class="input-btn">
+        <input type="text" id="todoInput" placeholder="Input your to do here" name="todo" >
+        <button id="add" class="global-buttons"> Add to list </button>
+      </div>
       <ul  class="todoContainer">
       </ul>
     </div>
